Tablet SCSS is done and mobile updated

--- a/scss/devices/brazil/_mobile.scss
+++ b/scss/devices/brazil/_mobile.scss
@@ -54,6 +54,7 @@
         > figure {
             row-gap: 5vh;
             width: 100%;
+            align-items: center;
         }
         
         h1 {
@@ -62,7 +63,9 @@
         }
         
         img {
-            width: 100%;
+            width: 43vh;
+            height: 28vh;
+            border-radius: 15px;
         }
         
         figcaption {
@@ -155,14 +158,13 @@
 
         section {
             @include flexColumn;
-            justify-content: center;
-            align-items: center;
+            @include center;
             border-radius: 7px;
             height: 95vh;
             background-color: gainsboro;
             > aside {
                 align-items: center;
-                height: 17vh;
+                height: 15vh;
                 border-radius: 7px 7px 0px 0px;
                 color: whitesmoke;
                 justify-content: center;
@@ -193,7 +195,7 @@
             width: 50%;
             text-align: center;
             padding: 3%;
-            border-radius: 4px;
+            font-weight: 400;
         }
 
         p {
@@ -210,64 +212,63 @@
             justify-content: center;            
         }
 
-        .plans-2 {
-            @include flexColumn;
-            justify-content: center;
-            row-gap: 8vh;
-            > p {
-                font-size: inherit;
-                color: goldenrod;
-                font-weight: 800;
-            }
-
-            aside {
-                flex-direction: row;
-                column-gap: 1vh;
-                > p {
-                    font-size: 22px;
-                    font-weight: 800;
-                }
-            }
-
-            .price {
-                text-decoration: line-through;
-                color: $aColor;
-            }
-        }
-
+        
         .value {
-            height: 5vh;
-            width: 92%;
-            padding: 2vh;
             background-color: goldenrod;
             color: $fontColor;
-            font-size: 20px;
             font-weight: 700;
-            border-radius: 7px;
+            text-shadow:1px 1px white;
+            font-size: 25px;
+            border-radius: 7px 7px 0px 0px;
+            height: 6vh;
+            display: flex;
+            @include center;
+            width: 100%;
         }
-
-        .plans-3 {
-            @include flexColumn;
-            justify-content: center;
-            row-gap: 3vh;
+        
+        .price {
+            text-decoration: line-through;
+            color: $aColor;
+        }
+        
+    }
+    
+    .plans-2 {
+        @include flexColumn;
+        justify-content: center;
+        row-gap: 8vh;
+        > p {
+            font-size: inherit;
+            color: goldenrod;
+            font-weight: 800;
+        }
+        
+        aside {
+            flex-direction: row;
+            column-gap: 1vh;
             > p {
-                font-size: inherit;
-                color: goldenrod;
+                font-size: 22px;
                 font-weight: 800;
             }
+        }    
+    }
 
-            aside {
-                flex-direction: row;
-                column-gap: 1vh;
-                > p {
-                    font-size: 22px;
-                    font-weight: 800;
-                }
-            }
-
-            .price {
-                text-decoration: line-through;
-                color: $aColor;
+    .plans-3 {
+        @include flexColumn;
+        justify-content: center;
+        row-gap: 3vh;
+        > p {
+            font-size: inherit;
+            color: goldenrod;
+            font-weight: 800;
+        }
+        
+        aside {
+            flex-direction: row;
+            column-gap: 1vh;
+            > p {
+                font-size: 22px;
+                font-weight: 800;
             }
         }
     }
