--- a/scss/devices/brazil/_desktop.scss
+++ b/scss/devices/brazil/_desktop.scss
@@ -40,7 +40,7 @@
       }
 
       h1 {
-        font-size: 50px;
+          font-size: 50px;
       }
 
       p {
@@ -48,4 +48,46 @@
          
       }
   }
+
+  // ASSIGNMENTS
+  .assignments {      
+      width: 95%;
+      p {
+          font-size: 23px;
+      }
+
+      h3 {
+          font-size: 30px;
+      }
+
+      aside {
+        font-size: 20px;
+        row-gap: 1vh;
+        > p {
+            font-size: 20px;
+        }
+      }
+
+      small {
+          font-size: 18px;
+      }
+
+      > article {
+          flex-wrap: nowrap;
+          column-gap: 4vh;
+          width: 100%;
+          padding-top: 5vh;
+      }
+
+      figure {
+          width: 15%;
+          padding: 4%;
+      }
+
+      figcaption {
+          row-gap: 7vh;
+      }
+  
+}
+
 }
