--- a/scss/devices/brazil/_mobile.scss
+++ b/scss/devices/brazil/_mobile.scss
@@ -226,7 +226,7 @@
             width: 100%;
         }
         
-        .price {
+        .dollar {
             text-decoration: line-through;
             color: $aColor;
         }
