changed the name of id to course

--- a/scss/devices/thai/_desktop.scss
+++ b/scss/devices/thai/_desktop.scss
@@ -143,8 +143,8 @@
     }
     
 
-    // PRICE
-    .price {
+    // course
+    .course {
         padding-bottom: 8vh;
         > article {
             height: 40vh;
