--- a/scss/devices/thai/_mobile.scss
+++ b/scss/devices/thai/_mobile.scss
@@ -255,8 +255,8 @@
 
     }
 
-    // PRICE
-    .price {
+    // course
+    .course {
         width: 100%;
         row-gap: 5vh;
         @include center;
