--- a/scss/devices/thai/_tablet.scss
+++ b/scss/devices/thai/_tablet.scss
@@ -178,8 +178,8 @@
     }
     
 
-    // PRICE
-    .price {
+    // course
+    .course {
         padding-bottom: 5vh;
         > article {
             height: 20vh;
