--- a/scss/devices/korea/_mobile.scss
+++ b/scss/devices/korea/_mobile.scss
@@ -131,6 +131,7 @@
     }
     > figure {
       display: flex;
+      flex-direction: row;
       align-items: flex-end;
       width: 95%;
       padding: 2%;
